feat: modify api's response data of read/search logs and test grpc ok
