# logger-service/docs/swagger.json
@@ -69,7 +69,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responsemodel.CommonResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/responsemodel.LogEntryResponse"
+                            }
                         }
                     }
                 }
@@ -103,7 +106,10 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/responsemodel.CommonResponse"
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/responsemodel.LogEntryResponse"
+                            }
                         }
                     }
                 }
@@ -140,7 +146,7 @@
                     "type": "string"
                 },
                 "service": {
-                    "type": "string"
+                    "$ref": "#/definitions/enum.Service"
                 }
             }
         },
@@ -160,6 +166,37 @@
             "properties": {
                 "result": {}
             }
+        },
+        "responsemodel.LogEntryResponse": {
+            "type": "object",
+            "properties": {
+                "createdAt": {
+                    "type": "string"
+                },
+                "data": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "service": {
+                    "$ref": "#/definitions/enum.Service"
+                },
+                "updatedAt": {
+                    "type": "string"
+                }
+            }
+        }
+    },
+    "securityDefinitions": {
+        "BearerAuth": {
+            "description": "JWT authorization header",
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
         }
     }
 }
